# quick_notepad

./: Cargo.toml  LICENCE.txt  LICENSE.txt  README.md  build-dist.sh
.github/workflows/: release.yaml  release.yml
assets/: quick-notepad.desktop
src/: main.rs  tui.rs
src/core/: actions.rs  edit_history.rs  graphemes.rs  mod.rs  selection.rs  shortcuts.rs  syntax.rs  tabs.rs  updater.rs
src/gui/: app.rs  editor.rs  mod.rs  state.rs  syntax.rs
src/tui/: caret.rs  drawing.rs  mod.rs  syntax.rs  terminal.rs  view.rs
src/tui/view/: buffer.rs  clipboard.rs  keyboard.rs  mod.rs  mouse.rs  render.rs  selection.rs
