[package]
name = "quick"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing TUI dependencies
crossterm = "0.29"
arboard = "3.4"

# GUI dependencies
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["syntect"] }

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "quick"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# For AppImage/packaging
[package.metadata.bundle]
name = "Quick Notepad"
identifier = "com.quicknotepad.app"
icon = ["assets/icon.png"]
resources = []
copyright = "© Filip Domanski"
category = "Utility"
short_description = "Fast and simple text editor"
long_description = "A minimalist text editor with both terminal and GUI interfaces"